# scrap_UA-Kyiv

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  consts.py  create_db_with_data.py  links.txt  pyproject.toml  scraper.py
db/: database.py
db/models/: __init__.py  activities.py  association.py  base.py  clients.py  companies.py
scraper/: db_manager.py  scraper.py  utils.py
