[tool.poetry]
name = "makarenko-fop"
version = "0.1.0"
description = ""
authors = ["Valeriy Vasilenko <hitehnik132@gmail.com>"]
readme = "README.md"
packages = [{include = "makarenko_fop"}]

[tool.poetry.dependencies]
python = "^3.11"
ta = "^0.10.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
pynescript = "^0.1.0"
matplotlib = "^3.7.2"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
pyscopg2 = "^66.0.2"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.6"
bs4 = "^0.0.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
